# xleak

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  create_comprehensive_test.py  dist-workspace.toml  flake.nix  generate_test_data.py
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: ci.yml  publish-aur.yml  publish-scoop.yml  publish-winget.yml  release.yml  update-homebrew.yml.backup
.planning/: TUI_ROADMAP.md
assets/: DEMO_RECORDING.md  demo.tape
src/: config.rs  display.rs  main.rs  tui.rs  workbook.rs
tests/fixtures/: README.md  generate_all_tests.py  generate_large_test_data.py  generate_test_comprehensive.py  generate_test_data.py  generate_test_large.py  generate_test_tables.py
wix/: main.wxs
