[package]
name = "xleak"
version = "0.2.4"
edition = "2024"
authors = ["Brandon Greenwell <greenwell.brandon@gmail.com>"]
description = "A fast terminal Excel viewer with interactive TUI, search, formulas, and export capabilities"
license = "MIT"
repository = "https://github.com/bgreenwell/xleak"
homepage = "https://github.com/bgreenwell/xleak"
keywords = ["excel", "xlsx", "terminal", "viewer", "tui"]
categories = ["command-line-utilities", "visualization"]
readme = "README.md"

[dependencies]
calamine = "0.26"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
prettytable-rs = "0.10"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

# Date/time handling
chrono = "0.4"

# Clipboard support
arboard = "3.4"

# Configuration file support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-release configuration
[package.metadata.release]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly = 1 },
]
pre-release-commit-message = "chore: release {{version}}"
tag-message = "Release {{version}}"

# cargo-aur configuration for Arch Linux
[package.metadata.aur]
depends = []
makedepends = ["cargo"]

# WiX configuration for MSI installer
[package.metadata.wix]
upgrade-guid = "7336173b-1ee3-408e-af34-d930507b8941"
path-guid = "67e1bb49-876f-4934-85e4-8faad4ada16f"
license = false
eula = false
